--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,20 @@
   </head>
 
   <body>
+    <nav class="overlay-menu">
+      <p>
+        <% if current_user %>
+          <p>
+            User: <%= current_user.email %> | <%= link_to "Sign out", destroy_user_session_path, method: 'delete' %> | <%= link_to "User Profile", user_path(current_user) %> | <%= link_to "Home", root_path %>
+          </p>
+        <% else %>
+          <p>
+            <%= link_to 'Sign In', new_user_session_path %> |
+            <%= link_to 'Sign Up', new_user_registration_path %> | <%= link_to "Home", root_path %>
+          </p>
+        <% end %>
+      </p>
+    </nav>
     <div class="container">
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
