--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 <h1>Welcome, <%= current_user.name %></h1>
 
 <p>
-  User: <%= current_user.email %> | <%= link_to "Sign out", destroy_user_session_path, method: 'delete' %> | <%= link_to "Home", root_path %>
+  User: <%= current_user.email %>
 </p>
 
 <%= link_to 'Edit Profile', edit_user_registration_path %>
