--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -16,3 +16,26 @@
 
   <hr>
 <% end %>
+
+<p><%= link_to "New Review", new_game_review_path(@game) %></p>
+<h3>Reviews:</h3>
+<% if @game.reviews.any? %>
+  <h4>Here are the reviews for this game:</h4>
+
+  <ul>
+    <% @game.reviews.each do |review| %>
+      <h4>Author: <%= review.user.name %></h4>
+      <h4>Rating:
+        <% review.rating.times do %>
+          <p>Star. </p>
+          <%#<%= image_tag("avo.png", :alt => "avocado rating", :id => "rating_icon") %>
+        <%end%>
+      </h4>
+      <br>
+      <p><%= review.body %></p>
+      <hr>
+    <% end %>
+  </ul>
+<% else %>
+  <p>There are no reviews yet!</p>
+<% end %>
