display ratings as kodamas

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -30,8 +30,7 @@
       <h4>Author: <%= review.user.name %></h4>
       <h4>Rating:
         <% review.rating.times do %>
-          <p>Star. </p>
-          <%#<%= image_tag("avo.png", :alt => "avocado rating", :id => "rating_icon") %>
+          <%= image_tag("kodama.png", :alt => "kodama rating", :id => "rating_icon") %>
         <%end%>
       </h4>
       <br>
