--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,18 @@
+<div class="jumbotron">
+  <h1>Grady's Great Games</h1>
+  <h3>View, rate, and discuss Games!</h3>
+</div>
 
-<h1>Grady's Great Games</h1>
+<h4>Sign up, sign in.</h4>
+<div class="row">
+  <div class="col-md-2">
+  </div>
+  <div class="col-md-8">
+    <h4>
+      Video games as a form of interactive entertainment have served a unique niche in our contemporary culture for years. Discuss with your fellow enthusiasts about your love (or hate) for a particular title. Whatever you do, please be respectful and have fun!
+    </h4>
+  </div>
+  <div class="col-md-2">
+  </div>
 
-<h3>View, rate, and discuss Games!</h3>
+</div>
