--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,8 +16,7 @@
       <h4>Game:  <%= review.game.name %></h4>
       <h4>Rating:
         <% review.rating.times do %>
-          <span>Star. </span>
-          <%#<%= image_tag("avo.png", :alt => "avocado rating", :id => "rating_icon") %>
+            <%= image_tag("kodama.png", :alt => "kodama rating", :id => "rating_icon") %>
         <%end%>
       </h4>
       <br>
