write readme and add screenshots

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -14,7 +14,9 @@
   height: 5%;
   font-family: 'Slabo 13px', serif;
 }
-#jumbotron h1 {
+
+#user_head {
+  font-family: 'Slabo 13px', serif;
 }
 
 #g1 {
