--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,7 @@
-<h1>Show User</h1>
-
-<h1>Welcome, <%= current_user.name %></h1>
+<div id="user_head">
+  <h1>User Profile</h1>
+  <h1>Welcome, <%= current_user.name %></h1>
+</div>
 
 <p>
   User: <%= current_user.email %>
