--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,6 +1,8 @@
-<h2><em><%= @game.name %></em></h2>
-<h3>Platform: <%= @game.platform %>, Genre: <%= @game.genre %>, $<%= @game.price %></h3>
-<h3>Average Rating: <%= @game.average_rating %> Kodamas</h3>
+<div id="user_head">
+  <h2><em><%= @game.name %></em></h2>
+  <h3>Platform: <%= @game.platform %>, Genre: <%= @game.genre %>, $<%= @game.price %></h3>
+  <h3>Average Rating: <%= @game.average_rating %> Kodamas</h3>
+</div>
 
 <h4>Description:</h4>
 <p><%= @game.description %></p>
