--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,9 @@
-<h4>Sign up, sign in.</h4>
+<h4 id="slogan">Sign up, sign in.</h4>
 <div class="row">
   <div class="col-md-2">
   </div>
   <div class="col-md-8">
-    <h4>
+    <h4 id="about">
       Video games as a form of interactive entertainment have served a unique niche in our contemporary culture for years. Discuss with your fellow enthusiasts about your love (or hate) for a particular title. Whatever you do, please be respectful and have fun!
     </h4>
   </div>
