--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,12 +21,12 @@
         <p>
           <% if current_user %>
           <p>
-            <%= link_to "Home", root_path %> | User: <%= current_user.email %> | <%= link_to "Sign out", destroy_user_session_path, method: 'delete' %> | <%= link_to "User Profile", user_path(current_user) %> | <%= link_to 'Games', games_path %>
+            <%= link_to "Home", root_path %> | <%= link_to 'Games', games_path %> | User: <%= current_user.email %> | <%= link_to "Sign out", destroy_user_session_path, method: 'delete' %> | <%= link_to "User Profile", user_path(current_user) %>
           </p>
           <% else %>
           <p>
-            <%= link_to "Home", root_path %> | <%= link_to 'Sign In', new_user_session_path %> |
-            <%= link_to 'Sign Up', new_user_registration_path %> | <%= link_to 'Games', games_path %>
+            <%= link_to "Home", root_path %> | <%= link_to 'Games', games_path %> | <%= link_to 'Sign In', new_user_session_path %> |
+            <%= link_to 'Sign Up', new_user_registration_path %>
           </p>
           <% end %>
         </p>
